--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- KOTLIN AND KOTLIN SPECIFIC -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -142,12 +148,19 @@
             <version>2.7.0</version>
         </dependency>
 
-
         <dependency>
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging</artifactId>
             <version>1.4.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
