--- a/backend/src/main/resources/db/changelog/001-users.init.yaml
+++ b/backend/src/main/resources/db/changelog/001-users.init.yaml
@@ -44,7 +44,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: picture_id
+                  name: image_id
                   type: bigint
                   constraints:
                     nullable: true
