--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>backend</artifactId>
 
     <properties>
-        <main.class>hr.fer.ppij.App</main.class>
+        <main.class>hr.fer.ppij.AppKt</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
