--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,19 +1,32 @@
+#spring:
+#  jpa:
+#    database-platform: org.hibernate.dialect.PostgreSQL94Dialect
+#    hibernate.ddl-auto: validate
+#  datasource:
+#    url: ""
+#    username:
+#    password:
+#    driver-class-name: org.postgresql.Driver
+#    tomcat:
+#      test-on-borrow: true
+#      validation-query: SELECT 1
+#      validation-query-timeout: 10
+#      test-while-idle: true
+#      remove-abandoned: true
+#      remove-abandoned-timeout: 240
 spring:
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQL94Dialect
-    hibernate.ddl-auto: validate
+    database-platform: "org.hibernate.dialect.H2Dialect"
   datasource:
-    url: ""
-    username:
+    platform: h2
+    url: "jdbc:h2:mem:db"
+    username: sa
     password:
-    driver-class-name: org.postgresql.Driver
-    tomcat:
-      test-on-borrow: true
-      validation-query: SELECT 1
-      validation-query-timeout: 10
-      test-while-idle: true
-      remove-abandoned: true
-      remove-abandoned-timeout: 240
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: "/db"
 
 server:
   port: 8080
