--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -17,6 +17,8 @@
 spring:
   jpa:
     database-platform: "org.hibernate.dialect.H2Dialect"
+    hibernate:
+      ddl-auto: validate
   datasource:
     platform: h2
     url: "jdbc:h2:mem:db"
@@ -33,7 +35,7 @@ server:
 
 liquibase:
   default-schema: public
-  change-log: classpath:db/liquibase-schema-changelog.yaml
+  change-log: classpath:db/liquibase-schema-with-test-data-changelog.yaml
 
 logging:
   level:
