--- a/backend/src/main/resources/db/changelog/002-sports.init.yaml
+++ b/backend/src/main/resources/db/changelog/002-sports.init.yaml
@@ -16,5 +16,6 @@ databaseChangeLog:
               - column:
                   name: name
                   type: varchar(100)
+                  unique: true
                   constraints:
                     nullable: false
