Change events model

--- a/backend/src/main/resources/db/changelog/010-event.init.yaml
+++ b/backend/src/main/resources/db/changelog/010-event.init.yaml
@@ -38,3 +38,8 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     nullable: true
+              - column:
+                  name: date
+                  type: timestamp
+                  constraints:
+                    nullable: true
