--- a/backend/src/main/resources/db/changelog/006-venue.init.yaml
+++ b/backend/src/main/resources/db/changelog/006-venue.init.yaml
@@ -29,7 +29,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: owner_id
-                  type: bigint
+                  name: location
+                  type: varchar(200)
                   constraints:
                     nullable: true
